2011-03-04  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.5

2011-03-04  Jeffrey Stedfast  <fejj@novell.com>

	Implements features requested in bug #641841 and #641320.

	* gmime/gmime-crypto-context.h (GMimeCryptoHash): Reordered to be
	identical to gnupg's listing.
	(GMimeCryptoPubKeyAlgo): Same.

	* gmime/gmime-crypto-context.c (g_mime_decryption_result_[g,s]et_cipher):
	New functions to get/set the cipher algorithm used.
	(g_mime_decryption_result_[g,s]et_mdc): New functions to get/set
	the mdc digest algorithm used.

	* gmime/gmime-gpg-context.c (gpg_hash_algo): Removed, no longer
	needed.
	(gpg_pubkey_algo): Same.
	(gpg_ctx_parse_status) :Parse the DECRYPTION_INFO status to get
	the cipher and mdc algorithms used.
	(gpg_decrypt): Set the cipher and mdc values on the
	GMimeDecryptionResult.

	* gmime/gmime-pkcs7-context.c (pkcs7_pubkey_algo): Removed, no
	longer needed.
	(pkcs7_hash_algo): Same.

2011-03-04  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_signer_info): Make sure
	to extract the pubkey_algo, hash_algo, sig_class, sig_expires, and
	return-code values for ERRSIG.

2011-03-04  Jeffrey Stedfast  <fejj@novell.com>

	Implemented bug #641319.

	* gmime/gmime-crypto-context.c (g_mime_crypto_recipient_*): New
	set of functions for manipulating a GMimeCryptoRecipient.
	(g_mime_decryption_result_*): New set of functions to manipulate a
	GMimeDecryptionResult
	(g_mime_crypto_context_decrypt): Now returns a
	GMimeDecryptionResult.

	* gmime/gmime-multipart-encrypted.c
	(g_mime_multipart_encrypted_decrypt): Updated for API changes.

	* gmime/gmime-pkcs7-context.c (pkcs7_decrypt): Updated for API
	changes.

	* gmime/gmime-gpg-context.c (gpg_decrypt): Updated for API
	changes.

2011-03-04  Jeffrey Stedfast  <fejj@novell.com>

	API cleanup as well as preparing for the possibility of a
	multi-protocol CryptoContext.
